--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>BlogGet y Blog</title>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.0/css/bulma.css">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -25,6 +26,7 @@
         <!-- placeholder -->
       </div>
     </div>
-
+    <script type="text/javascript" src="src/views/index.js">
+    </script>
   </body>
 </html>
