--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- placeholder -->
       </div>
     </div>
-    <script type="text/javascript" src="src/views/index.js">
+    <script type="text/javascript" src="index.js">
     </script>
   </body>
 </html>
