--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <!-- placeholder -->
       </div>
     </div>
-    <script type="text/javascript" src="index.js">
+    <script type="text/javascript" src="Templates/index.js">
+    </script>
+    <script type="text/javascript" src="render.js">
     </script>
   </body>
 </html>
