--- a/post.html
+++ b/post.html
@@ -14,17 +14,17 @@
         <!-- placeholder -->
       </div>
       <div class="column">
-        <div class="field article-title">
+        <div class="field">
           <label class="label">Title</label>
           <div class="control">
-            <input class="input" type="text" placeholder="Text input">
+            <input id="post-title" class="input" type="text" placeholder="Text input">
           </div>
         </div>
 
-        <div class="field article-body">
+        <div class="field">
           <label class="label">Message</label>
           <div class="control">
-            <textarea class="textarea" placeholder="Textarea"></textarea>
+            <textarea id="post-body" class="textarea" placeholder="Textarea"></textarea>
           </div>
         </div>
 
