--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
         <!-- placeholder -->
       </div>
     </div>
-    <script type="text/javascript" src="Templates/index.js">
-    </script>
-    <script type="text/javascript" src="render.js">
-    </script>
+    <script type="text/javascript" src="requests.js"></script>
+    <script type="text/javascript" src="Templates/index.js"></script>
+    <script type="text/javascript" src="Render/home.js"></script>
   </body>
 </html>
