add hero banner

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <section class="hero">
+    <section class="hero is-success is-bold">
       <div class="hero-body">
         <div class="container">
           <h1 class="title">
-            HI here, write something!
+            Hi here, write something!
           </h1>
           <h2 class="subtitle">
             (Press the button)
