start New Post feature

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <h2 class="subtitle">
             (Press the button)
           </h2>
-          <button type="button" id="createNew" name="button">New Post</button>
+          <a class="button is-large is-inverted is-outlined" href="post.html">New Post</a>
         </div>
       </div>
     </section>
