--- a/post.html
+++ b/post.html
@@ -9,11 +9,24 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <section class="hero is-success is-bold">
+      <div class="hero-body">
+        <div class="container">
+          <h1 class="title">
+            Hi here, write something!
+          </h1>
+          <h2 class="subtitle">
+            (Press the button)
+          </h2>
+          <a class="button is-large is-inverted is-outlined" href="post.html">New Post</a>
+        </div>
+      </div>
+    </section>
     <div class="columns">
       <div class="column is-one-quarter">
         <!-- placeholder -->
       </div>
-      <div class="column">
+      <div class="column" id="container">
         <form id="createNew" name="createNew">
           <div class="field">
             <label class="label">Title</label>
@@ -45,7 +58,7 @@
         <!-- placeholder -->
       </div>
     </div>
-    
+
     <script type="text/javascript" src="requests.js"></script>
     <script type="text/javascript" src="Templates/index.js"></script>
     <script type="text/javascript" src="Render/home.js"></script>
