changed form and index into separate pages again

--- a/post.html
+++ b/post.html
@@ -26,7 +26,7 @@
       <div class="column is-one-quarter">
         <!-- placeholder -->
       </div>
-      <div class="column" id="container">
+      <div class="column">
         <form id="createNew" name="createNew">
           <div class="field">
             <label class="label">Title</label>
@@ -44,7 +44,7 @@
 
           <div class="field is-grouped">
             <div class="control">
-              <button type="submit" class="button is-link">Save</button>
+              <a href="index.html"><button type="submit" class="button is-link">Save</button></a>
             </div>
             <div class="control">
               <a class="button is-text" href="index.html">Cancel</a>
