--- a/post.html
+++ b/post.html
@@ -44,7 +44,7 @@
 
           <div class="field is-grouped">
             <div class="control">
-              <a href="index.html"><button type="submit" class="button is-link">Save</button></a>
+              <button type="submit" class="button is-link">Save</button>
             </div>
             <div class="control">
               <a class="button is-text" href="index.html">Cancel</a>
