adding form template in a serparate file

--- a/post.html
+++ b/post.html
@@ -13,7 +13,7 @@
       <div class="hero-body">
         <div class="container">
           <h1 class="title">
-            Hi here, write something!
+            Hi there, write something!
           </h1>
           <h2 class="subtitle">
             (Press the button)
@@ -24,7 +24,6 @@
     </section>
     <div class="columns">
       <div class="column is-one-quarter">
-        <!-- placeholder -->
       </div>
       <div class="column">
         <form id="createNew" name="createNew">
@@ -51,11 +50,8 @@
             </div>
           </div>
         </form>
-
-      </div> <!-- column -->
-
+      </div>
       <div class="column is-one-quarter">
-        <!-- placeholder -->
       </div>
     </div>
 
