--- a/index.html
+++ b/index.html
@@ -24,20 +24,16 @@
         </div>
       </div>
     </section>
-    <!-- <div class="columns"> -->
-      <!-- <div class="column is-one-quarter">
-      </div> -->
-      <div class="container" id="container">
-      </div> <!-- column -->
 
-      <!-- <div class="column is-one-quarter">
-      </div> -->
-    <!-- </div> -->
-    <script type="text/javascript" src="requests.js"></script>
-    <script type="text/javascript" src="Templates/index.js"></script>
-    <script type="text/javascript" src="Templates/form.js"></script>
+    <div class="container" id="container">
+    </div> <!-- column -->
+
+    <script src="requests.js"></script>
+    <script src="Templates/index.js"></script>
+    <script src="Templates/form.js"></script>
     <script src="Render/form.js"></script>
-    <script defer type="text/javascript" src="Render/home.js"></script>
+    <script src="Render/new.js"></script>
+    <script defer src="Render/home.js"></script>
 
   </body>
 </html>
