event handlers for deleting and editing

--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
     </div> <!-- column -->
 
     <script src="requests.js"></script>
+    <script src="Render/home.js"></script>
     <script src="Templates/index.js"></script>
     <script src="Templates/form.js"></script>
     <script src="Render/form.js"></script>
     <script src="Render/new.js"></script>
-    <script defer src="Render/home.js"></script>
+
 
   </body>
 </html>
