--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <script src="Templates/index.js"></script>
     <script src="Templates/form.js"></script>
     <script src="Render/form.js"></script>
+    <script src="Templates/single.js"></script>
     <script src="Render/new.js"></script>
-
 
   </body>
 </html>
