strguggling with event handlers

--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
     <script src="requests.js"></script>
     <script src="Render/home.js"></script>
     <script src="Templates/index.js"></script>
+    <script src="Render/edit.js"></script>
     <script src="Templates/form.js"></script>
     <script src="Render/form.js"></script>
     <script src="Templates/single.js"></script>
     <script src="Render/new.js"></script>
+    <script defer src="main.js"></script>
 
   </body>
 </html>
