--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script src="Templates/single.js"></script>
     <script src="Render/new.js"></script>
     <script src="Render/home.js"></script>
-    <script defer src="main.js"></script>
+    <!-- <script defer src="main.js"></script> -->
 
   </body>
 </html>
