--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <section class="hero is-success is-bold is-medium">
+    <section class="hero is-success is-bold has-text-centered">
       <div class="hero-body">
         <div class="container">
-          <h1 class="title">
-            Hi there, write something!
-            <a class="button is-large is-success is-inverted is-outlined is-pulled-right" id="newPost" href="#">New Post</a>
-          </h1>
+          <h1 class="title">Hi there, write something!</h1>
+          <a class="button is-large is-success is-inverted is-outlined" id="newPost" href="#"><i class="fa fa-plus" aria-hidden="true"></i></a>
         </div>
       </div>
     </section>
@@ -34,6 +32,7 @@
     <script src="Render/new.js"></script>
     <script src="Render/home.js"></script>
     <script src="Render/edit.js"></script>
+    <script src="Templates/read_more.js"></script>
 
   </body>
 </html>
