--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://use.fontawesome.com/35e91a5fb0.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.0/css/bulma.css">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Butterfly+Kids|Covered+By+Your+Grace|Crafty+Girls|Dawning+of+a+New+Day|Gloria+Hallelujah|Homemade+Apple|La+Belle+Aurore|Loved+by+the+King|Mrs+Saint+Delafield|Over+the+Rainbow|Permanent+Marker|Reenie+Beanie|Sacramento|Shadows+Into+Light|Shadows+Into+Light+Two|Sue+Ellen+Francisco|Waiting+for+the+Sunrise" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -19,12 +20,13 @@
     </section>
 
     <div class="container">
-      <div class="columns is-multiline is-mobile is-centered" id="container"><!-- Posts go here -->
+      <div class="columns is-multiline is-centered" id="container"><!-- Posts go here -->
       </div>
     </div>
 
 
     <script src="requests.js"></script>
+    <script type="Templates/styling.js"></script>
     <script src="Templates/index.js"></script>
     <script src="Templates/form.js"></script>
     <script src="Render/form.js"></script>
