--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://use.fontawesome.com/35e91a5fb0.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.0/css/bulma.css">
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Covered+By+Your+Grace|Crafty+Girls|Dawning+of+a+New+Day|Gloria+Hallelujah|Homemade+Apple|La+Belle+Aurore|Loved+by+the+King|Permanent+Marker|Reenie+Beanie|Sacramento|Shadows+Into+Light|Shadows+Into+Light+Two|Sue+Ellen+Francisco|Waiting+for+the+Sunrise|Autour+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Covered+By+Your+Grace|Crafty+Girls|Gloria+Hallelujah|Homemade+Apple|La+Belle+Aurore|Loved+by+the+King|Permanent+Marker|Reenie+Beanie|Shadows+Into+Light|Shadows+Into+Light+Two|Sue+Ellen+Francisco|Waiting+for+the+Sunrise|Autour+One" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
